# flet-code-editor

./: README.md
flutter/flet_code_editor/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
flutter/flet_code_editor/lib/: flet_code_editor.dart
flutter/flet_code_editor/lib/src/: code_editor.dart  create_control.dart
flutter/flet_code_editor/test/: flet_code_editor_test.dart
python/: pyproject.toml
python/flet-code-editor/src/flet_code_editor/: main.py  pubspec.yaml
python/flet-code-editor/src/flet_code_editor/controls/: code_editor.py
